[package]
name = "keeps"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true

[profile.dev]
[profile.dev.package."*"]
opt-level = 3
debug = false

[[bin]]
name = "client"
path = "src/bin/client.rs"

[features]
dev = ["bevy/dynamic"]

[dependencies.bevy]
version = "0.8.0"
features = []

[dependencies]
bevy_asset_loader = "0.12"
bevy_embedded_assets = "0.4.0"
bevy_mod_check_filter = "0.3.0"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras" }

bevy_egui = "0.15.1"
bevy-inspector-egui = "0.12.1"
bevy_prototype_debug_lines = { version = "0.8", features = ["3d"] }

rand = "0.8.3"

# Keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }
